--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ readme = "readme.md"
 osmpbf = "0.2"
 anyhow = "1.0"
 rijksdriehoek = "0.1"
+clap = { version = "4.3", features = ["derive"] }
+env_logger = "0.10.0"
+log = "0.4.19"
